--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -5,7 +5,7 @@
 
 <p>
     A demo app to showcase how to detect user inactivity in your window. You can activate it by mouse move, user input, click, scroll,
-    keypress, touch, resize, window focus etc.
+    keypress, touch, resize, window focus, context menu etc.
 
 <p>
 
